# slobypy

./: .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: standard-checks.yml
examples/: component_based_view.py
slobypy/: __init__.py  __main__.py  _templates.py  app.py  manager.py  rpc.py
slobypy/communication/: data_builder.py
slobypy/css/: SloTextDesign.css  button.css  css_template.py
slobypy/errors/: __init__.py  cli_errors.py  pages.py  react_errors.py  scss_errors.py
slobypy/react/: __init__.py  _html_types.py  _react_types.py  _types.py  base_html.py  component.py  context.py  css.py  css_properties.py  design.py  events.py  html.py  inheritance_map.py  path.py  reactive.py  router.py  scss.py  scss_classes.py  scss_group.py  scss_properties.py  tools.py
slopy/: __init__.py  rpc.py
slopy/api/: application.py
slopy/react/: __init__.py  _types.py  component.py  events.py  path.py  tools.py
tests/: test.js  test.py  testws.py
tests/demo_server_static/js/: script.js
tests/realistic_test_environment/: app.py  main.py  preprocessor.py  sloby.config.json  tailwind.config.js
tests/realistic_test_environment/components/: example_component.py
tests/realistic_test_environment/css/: input.css  output.css
tests/realistic_test_environment/scss/: main.py
