[tool.poetry]
name = "slopy"
version = "0.1.0"
description = ""
authors = ["Hadházy Tamás <helsgithub15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]

python = "^3.11"
mypy = "^0.991"
fastapi = "^0.87.0"
websockets = "^10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

