[tool.poetry]
name = "slobypy"
version = "0.1.0"
description = ""
authors = ["Hadházy Tamás <helsgithub15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^0.991"
websockets = "^10.4"
pylint = "^2.15.7"
typer = {extras = ["all"], version = "^0.7.0"}
watchfiles = "^0.18.1"
textual = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
slobypy = "slobypy.manager:start_typer"

[tool.pyright]
exclude = ["tests/*", "**/site-packages/**/*.py"]
typeCheckingMode = "strict"
pythonVersion = "3.11"

reportUnnecessaryTypeIgnoreComment = true
