[metadata]
name = slopy
version = 0.0.1
author = FlurryGlo
author_email = freelancerworkup23@gmail.com
description = "For the sloby web projects"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
url =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved:: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = 3.10
include_package_data = True